# clarium

./: .gitignore  CLI examples.md  Cargo.toml  Dockerfile  Dockerfile.dev  Dockerfile.distroless  Makefile  README.md  README.txt  docker-compose.yml  plan_vectors.md  plan_vectors_2.md
.junie/: guidelines.md
benches/: bench_support.rs  graph.rs  kv.rs  sql_graph.rs  sql_kv.rs  sql_tables.rs  sql_time_series.rs  sql_vector.rs  tables.rs  time_series.rs  vector_ann.rs
docs/: DDL LLM guide.md  README.md  administration.md  benchmarks.md  cli.md  compatibility.md  concepts.md  error-handling.md  examples.md  getting-started.md  graph goals.md  graph langguage updates.md  graph-catalog.md  pgwire-error-handling.md  sql-reference.md  storage-format.md  system-catalogs.md  time-series.md  udf.md  vector-indexes.md  views.md
docs/dev/: SQL Alchemy 2.0 Process.md  junie-polars-guidelines.md  pgwire.md
docs/filestore/: concepts.md  getting-started.md  sql.md
plans/: Explain and Graphstore expansion.md  RBAC.md  SQL column resolution.md  arrays.md  filestore_clones_plan.md  filestore_git_backend_plan.md  filestore_implementation_plan.md  filestore_plan.md  plan_lua_caching.md
plans/postgres system objects/: postgres information schema views.md  postgres pg_catalog table reference.md  postgres pg_catalog view reference.md
plans/scalability/: cluster_ha_scaleout.md  cluster_raid.md  cluster_tenancy.md
reviews/: enterprise_readiness.md  security.md
scripts/ddl/performance/: 01_schema.sql  02_env_host.sql  03_env_build.sql  04_run.sql  05_bench.sql  06_bench_param.sql  07_metric_def.sql  08_metric_ts.sql  09_artifact.sql  10_indexes.sql  11_metric_hourly.sql  12_metric_daily.sql  13_view_latest_run.sql  14_view_baseline_run.sql  15_view_latest_vs_baseline.sql  16_view_regressions_over_threshold.sql
scripts/ddl/security/: 00_README.txt  01_create_schema.sql  02_roles.sql  03_users.sql  04_role_memberships.sql  05_policies.sql  06_resources.sql  07_fs_overrides.sql  08_publications.sql  09_pub_graph.sql  10_epochs.sql  11_install_log.sql  11_rbac_grants.sql  12_rbac_future_grants.sql  20_seed_builtin_roles.sql  21_seed_privileges.sql
scripts/scalars/: abs.lua  acos.lua  acosh.lua  acot.lua  acoth.lua  age.lua  array_to_string.lua  ascii.lua  asin.lua  asinh.lua  atan.lua  atan2.lua  atanh.lua  bit_length.lua  btrim.lua  ceil.lua  char_length.lua  chr.lua  clock_timestamp.lua  coalesce.lua  concat.lua  concat_ws.lua  convert.lua  convert_from.lua  convert_to.lua  cos.lua  cosh.lua  cosine_sim.lua  cot.lua  current_database.lua  current_date.lua  current_schema.lua  current_time.lua  current_timestamp.lua  current_user.lua  date_part.lua  date_trunc.lua  decode.lua  degrees.lua  div.lua  (+85 more)
scripts/system_views/: reconcilliation.md
scripts/system_views/information_schema/: _attributes_.view  _columns_.view  _pg_foreign_data_wrappers.view  _pg_foreign_servers.view  _pg_foreign_table_columns.view  _pg_foreign_tables.view  _pg_user_mappings.view  _routines_.view  _sequences_.view  _tables_.view  _transforms_.view  _views_.view  administrable_role_authorizations.view  applicable_roles.view  character_sets.view  check_constraint_routine_usage.view  check_constraints.view  collation_character_set_applicability.view  collations.view  column_column_usage.view  column_domain_usage.view  column_options.view  column_privileges.view  column_udt_usage.view  columns_basic.view  columns_simple.sql  constraint_column_usage.view  constraint_table_usage.view  data_type_privileges.view  domain_constraints.view  domain_udt_usage.view  domains.view  element_types.view  enabled_roles.view  foreign_data_wrapper_options.view  foreign_data_wrappers.view  foreign_server_options.view  foreign_servers.view  foreign_table_options.view  foreign_tables.view  (+28 more)
scripts/system_views/pg_catalog/: pg_available_extension_versions.view  pg_available_extensions.view  pg_backend_memory_contexts.view  pg_class_basic.view  pg_class_simple.sql  pg_class_simple.view  pg_config.view  pg_cursors.view  pg_file_settings.view  pg_group.view  pg_hba_file_rules.view  pg_indexes.view  pg_locks.view  pg_matviews.view  pg_policies.view  pg_prepared_statements.view  pg_prepared_xacts.view  pg_publication_tables.view  pg_replication_origin_status.view  pg_replication_slots.view  pg_roles.view  pg_rules.view  pg_seclabels.view  pg_sequences.view  pg_settings.view  pg_shadow.view  pg_shmem_allocations.view  pg_stat_activity.view  pg_stat_all_indexes.view  pg_stat_all_tables.view  pg_stat_archiver.view  pg_stat_bgwriter.view  pg_stat_database.view  pg_stat_database_conflicts.view  pg_stat_gssapi.view  pg_stat_progress_analyze.view  pg_stat_progress_basebackup.view  pg_stat_progress_cluster.view  pg_stat_progress_copy.view  pg_stat_progress_create_index.view  (+35 more)
scripts/tvfs/: pg_available_extensions.lua  pg_available_extensions.meta.json
src/: error.rs  error_tests.rs  ident.rs  lib.rs  lua_bc.rs  main.rs  pgwire_server.rs  query.rs  scripts.rs  security.rs  server.rs  storage.rs  system.rs  system_paths.rs  system_views.rs
src/cli/: connectivity.rs  mod.rs  outputformatter.rs
src/identity/: adapters.rs  authorizer.rs  mod.rs  principal.rs  provider.rs  request_context.rs  session.rs
src/pgwire_server/: encodedecode.rs  inline.rs  misc.rs  oids.rs  parse.rs  security.rs  send.rs  structs.rs  tests.rs
src/server/: data_context.rs  exec.rs  graphstore.rs  query.rs
src/server/exec/: df_utils.rs  df_utils_json.rs  df_utils_json_tests.rs  exec_alter.rs  exec_array_tvf.rs  exec_auth_shadow.rs  exec_calculate.rs  exec_common.rs  exec_keys.rs  (+19 more)
src/storage/: io.rs  kv.rs  mod.rs  paths.rs  schema.rs  storage_tests.rs
src/system_catalog/: mod.rs  registry.rs  shared.rs
src/tools/: installer.rs  mod.rs  perf_ingest.rs  tablecheck.rs  viewgen.rs
tests/: pgwire_binary_complex_tests.rs  pgwire_binary_manual_tests.rs  pgwire_ddl_from_exec_tests.rs  pgwire_mock_tests.rs  rbac_object_scopes_tests.rs  rbac_tests.rs  sql_comments.rs
tests/python/: conftest.py  requirements.txt  test_create_and_query.py  test_inspect.py  test_vectors_ann.py
(+214 files in other folders)
