[package]
name = "clarium"
version = "0.5.0"
edition = "2021"
description = "time-series, key/vaue., vecotr, knowledge graph and wide table store using Parquet with a simple SQL-like query language, HTTP and WebSocket APIs and a postgres-wired interface"
authors = ["Euan Duncan Macinnes"]

include = ["scripts/"]

[dependencies]
axum = { version = "0.8.6", features = ["macros", "ws", "json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2.0.17"
anyhow = "1"
pub-fields = "0.1.1"
tracing = "0.1.43"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
regex = "1"
chrono = { version = "=0.4.42", features = ["serde"] }
parking_lot = { version = "0.12", features = ["deadlock_detection"] }
terminal_size = "0.4.3"
rustyline = "13"

# Filesystem walking for Criterion ingestion
walkdir = "2"
whoami = "1"

futures-util = "0.3"

# Optional Postgres wire protocol via pgwire
pgwire = { version = "0.33", optional = true, default-features = false }

# Polars for convenient Parquet IO and simple grouping
polars = { version = "0.51.0", default-features = false, features = ["lazy", "parquet", "fmt", "serde", "strings", "temporal","dtype-decimal"] }

# GraphStore dependencies (readers, checksums)
memmap2 = "0.9"
crc32fast = "1.3"
polars-core = { version = "0.51.0", default-features = false }

# Password hashing
argon2 = { version = "0.5", features = ["password-hash"] }
password-hash = "0.5"
rand_core = "0.9"
getrandom = "0.2"

# Windows path handling
path-absolutize = "3"

# HTTP client for CLI interpreter connect mode
reqwest = { version = "0.12", features = ["json", "cookies", "rustls-tls"] }
tokio-tungstenite = { version = "0.23", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }
tokio-postgres = { version = "0.7", features = ["runtime"] }
urlencoding = "2"
# Dev-only ORM testing (feature-gated)
sea-orm = { version = "0.12", default-features = false, features = ["sqlx-postgres", "runtime-tokio-rustls"], optional = true }
sea-query = { version = "0.30", optional = true }

# Lua scripting engine for UDFs
mlua = { version = "0.9", features = ["lua54", "vendored", "serialize"] }
once_cell = "1"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
bincode = "1"
uuid = { version = "1", features = ["v4", "serde"] }
unicode-normalization = "0.1"
base64 = "0.22"

# Git backends (optional, used by FILESTORE; no default features changed)
gix = { version = "0.63", optional = true }
git2 = { version = "0.19", optional = true }

[profile.release]
lto = true
codegen-units = 1

[features]
# Enable the optional pgwire dependency via a named feature that matches cfg(feature = "pgwire") in code
pgwire = ["dep:pgwire"]
# Build with pgwire and ANN HNSW (with mmap) enabled by default
default = ["pgwire", "ann_hnsw", "ann_hnsw_mmap"]

# Optional ANN HNSW engine integration (on by default)
ann_hnsw = ["dep:hnsw_rs"]

# Optional mmap-backed loading for ANN HNSW artifacts
ann_hnsw_mmap = []

# Dev-only SeaORM runner in clarium_test_suite
seaorm_dev = ["dep:sea-orm", "dep:sea-query"]

# FILESTORE Git backend features
# Pure Rust gitoxide support (off by default for now; enable per-binary/crate as needed)
gitoxide = ["dep:gix"]
# Optional fallback to libgit2 for push operations only
libgit2-push = ["dep:git2"]

[dev-dependencies]
futures = "0.3.31"
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.8"

# --- Developer build profile tuning for faster incremental compiles ---
# These settings significantly speed up `cargo check/build` during inner-loop development
# without affecting release builds. They also reduce the rebuild blast radius across deps.
[profile.dev]
opt-level = 0          # Do not optimize in dev; keeps compile fast
debug = 1              # Sufficient for backtraces without heavy debug info
lto = false            # Disable LTO in dev
codegen-units = 256    # Maximize parallel codegen across crates
incremental = true     # Enable incremental compilation

# Ensure dependencies and build scripts are not built with higher opt levels in dev.
[profile.dev.package."*"]
opt-level = 0

[profile.dev.build-override]
opt-level = 0
codegen-units = 64

[profile.test]
opt-level = 0
debug = 1
lto = false
codegen-units = 256
incremental = true

[profile.test.package."*"]
opt-level = 0

[profile.test.build-override]
opt-level = 0
codegen-units = 64

[profile.bench]
opt-level = 0
debug = 1
lto = false
codegen-units = 256
incremental = true

[profile.bench.package."*"]
opt-level = 0

[profile.bench.build-override]
opt-level = 0
codegen-units = 64

[dependencies.hnsw_rs]
version = "0.3"
optional = true

[[bench]]
name = "vector_ann"
harness = false

[[bench]]
name = "tables"
harness = false

[[bench]]
name = "time_series"
harness = false

[[bench]]
name = "graph"
harness = false

[[bench]]
name = "kv"
harness = false

[[bench]]
name = "sql_tables"
harness = false

[[bench]]
name = "sql_time_series"
harness = false

[[bench]]
name = "sql_vector"
harness = false

## Note: removed invalid bench target `sql_graph` (file not present)

## Note: removed invalid bench target `sql_kv` (file not present)
